--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Sep 22 11:13:56 PDT 2017
-ndk.dir=C\:\\sdk\\ndk-bundle
-sdk.dir=C\:\\sdk
+#Fri Sep 22 22:08:10 PKT 2017
+sdk.dir=C\:\\Users\\HP\\AppData\\Local\\Android\\Sdk
