--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.codextech.ibtisam.lepak_app"
     android:versionCode="1"
@@ -9,53 +10,54 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
-        android:name="com.codextech.ibtisam.lepak_app.wiget.App"
+        android:name=".wiget.App"
+        android:allowBackup="true"
         android:icon="@drawable/pos_ico"
         android:label="@string/app_name"
-        android:allowBackup="true"
-        android:screenOrientation="portrait"
         android:resizeableActivity="false"
+        android:screenOrientation="portrait"
         android:theme="@style/AppTheme">
-        <activity
-            android:name="com.codextech.ibtisam.lepak_app.activity.OldMainActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait">
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
-        </activity>
+
+        <!-- <activity -->
+        <!-- android:name="com.codextech.ibtisam.lepak_app.activity.OldMainActivity" -->
+        <!-- android:label="@string/app_name" -->
+        <!-- android:screenOrientation="portrait"> -->
+        <!-- &lt;!&ndash;<intent-filter>&ndash;&gt; -->
+        <!-- &lt;!&ndash;<action android:name="android.intent.action.MAIN" />&ndash;&gt; -->
+        <!-- &lt;!&ndash;<category android:name="android.intent.category.LAUNCHER" />&ndash;&gt; -->
+        <!-- &lt;!&ndash;</intent-filter>&ndash;&gt; -->
+        <!-- </activity> -->
 
         <activity
-            android:name="com.codextech.ibtisam.lepak_app.activity.LoginActivity"
+            android:name=".activity.LoginActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name="com.codextech.ibtisam.lepak_app.activity.HomeActivity"
+            android:name=".activity.HomeActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.TicketActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.AllTicketsActivity"
             android:screenOrientation="portrait" />
 
-        <activity
-            android:name="com.codextech.ibtisam.lepak_app.activity.TicketActivity"
-            android:screenOrientation="portrait" />
-
-        <activity
-            android:name="com.codextech.ibtisam.lepak_app.activity.AllTicketsActivity"
-            android:screenOrientation="portrait" />
-
-        <receiver android:name="com.codextech.ibtisam.lepak_app.receiver.StartReceiver">
+        <receiver android:name=".receiver.StartReceiver">
             <intent-filter android:priority="996">
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </receiver>
 
-        <service android:name="com.codextech.ibtisam.lepak_app.service.ScanService">
-        </service>
+        <service android:name=".service.ScanService"></service>
 
+        <activity android:name=".OutScreen"></activity>
     </application>
+
 </manifest>
