lepak 11......Navigation drwaer added

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,7 @@ android {
 
         ndk {
             abiFilters "armeabi"
+//            abiFilters "armeabi", "armeabi-v7a", "x86"
         }
     }
     buildTypes {
@@ -22,6 +23,7 @@ android {
         }
     }
 }
+
 
 
 
@@ -36,6 +38,7 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support:design:26.+'
+
     compile 'com.android.support:cardview-v7:26.+'
     compile 'io.realm:realm-android:0.82.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
