--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".wiget.App"
@@ -30,7 +30,7 @@
         <!-- </activity> -->
 
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.LoginActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -42,7 +42,7 @@
             android:name=".activity.HomeActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activity.TicketPrintActivity"
+            android:name=".activity.TicketFormatActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".activity.AllTicketsActivity"
@@ -58,13 +58,23 @@
 
         <service android:name=".service.ScanService" />
 
-        <activity android:name=".activity.TicketReturn" />
-        <activity android:name=".activity.LoginActivity" />
-        <activity android:name=".activity.LocationActivity" />
-        <activity
-            android:name=".activity.RegisterActivity"
-            android:label="@string/title_activity_main"
-            android:theme="@style/AppTheme"></activity>
+        <activity android:name=".activity.TicketReturn"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait"/>
+        <!-- <activity android:name=".activity.LoginActivity" /> -->
+        <activity android:name=".activity.RegisterActivity"
+            android:screenOrientation="portrait"/>
+        <!-- <activity android:name=".activity.LoginActivity" /> -->
+        <activity android:name=".activity.LocationActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".fragments.SummaryFragment"
+            android:screenOrientation="portrait"/>
+        <!-- <activity -->
+        <!-- android:name=".activity.RegisterActivity" /> -->
+        <!-- <activity android:name=".LogOut"></activity> -->
+        <activity android:name=".LogOut"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
