--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     android:versionCode="1"
     android:versionName="1.0">
 
+    <uses-permission android:name="android.permission.NFC" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -41,11 +42,13 @@
         <activity
             android:name=".activity.LoginActivity"
             android:screenOrientation="portrait">
-            <!--<intent-filter>-->
-            <!--<action android:name="android.intent.action.MAIN" />-->
 
-            <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
         <activity
             android:name=".activity.HomeActivity"
@@ -65,11 +68,14 @@
             android:screenOrientation="portrait" />
         <!-- <activity android:name=".activity.LoginActivity" /> -->
         <activity
-            android:name=".fragments.SummaryFragment"
+            android:name=".fragments.SummaryActivity"
             android:screenOrientation="portrait" />
         <!-- <activity -->
         <!-- android:name=".activity.RegisterActivity" /> -->
         <!-- <activity android:name=".LogOut"></activity> -->
+        <activity
+            android:name=".activity.NfcGetAllCoinsActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".LogOut"
             android:screenOrientation="portrait" />
