--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.codextech.ibtisam.lepak_app"
     android:versionCode="1"
     android:versionName="1.0">
+
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.NFC" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -14,7 +15,6 @@
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
 
     <application
         android:name=".wiget.App"
@@ -29,29 +29,25 @@
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".activity.LoginActivity"
-            android:screenOrientation="portrait">
-
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".activity.TicketFormatActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".activity.AllTicketsActivity"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".activity.RegisterActivity"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".fragments.SummaryActivity"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".activity.NfcGetAllCoinsActivity"
             android:screenOrientation="portrait" />
@@ -59,6 +55,7 @@
         <receiver android:name=".receiver.StartReceiver">
             <intent-filter android:priority="996">
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </receiver>
@@ -67,6 +64,13 @@
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
             </intent-filter>
         </receiver>
+
         <service android:name=".service.ScanService" />
+
+        <activity
+            android:name=".BlackList"
+            android:label="@string/title_activity_black_list"
+            android:theme="@style/AppTheme"></activity>
     </application>
+
 </manifest>
