--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,6 @@ android {
     }
 }
 
-
 dependencies {
     compile files('libs/core.jar')
     compile files('libs/IdCardUartLib.jar')
@@ -34,9 +33,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.android.support:design:26.+'
-    compile 'com.android.support:cardview-v7:26.+'
+    compile 'com.android.support:appcompat-v7:26.0.2'
+    compile 'com.android.support:design:26.0.2'
+    compile 'com.android.support:cardview-v7:26.0.2'
     compile 'io.realm:realm-android:0.82.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.volley:volley:1.0.0'
