--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
         </activity>
         <activity
             android:name=".activity.LoginActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.TicketFormatActivity"
             android:screenOrientation="portrait" />
@@ -46,7 +46,7 @@
             android:name=".activity.RegisterActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".fragments.SummaryActivity"
+            android:name=".activity.SummaryActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".activity.NfcGetAllCoinsActivity"
@@ -69,8 +69,7 @@
 
         <activity
             android:name=".BlackList"
-            android:label="@string/title_activity_black_list"
-            android:theme="@style/AppTheme"></activity>
+            android:label="@string/title_activity_black_list" />
     </application>
 
 </manifest>
