>just one field on print and return screens >fields on back will null in editText >API on login is set >just extra screen are left >sim state check >Hide NFC and All show

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,8 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".activity.TicketFormatActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoDisplay"/>
         <activity
             android:name=".activity.AllTicketsActivity"
             android:screenOrientation="portrait" />
