--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,26 +25,26 @@ android {
 }
 
 dependencies {
-    compile files('libs/core.jar')
-    compile files('libs/IdCardUartLib.jar')
-    compile files('libs/zypos1.8.jar')
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation files('libs/core.jar')
+    implementation files('libs/IdCardUartLib.jar')
+    implementation files('libs/zypos1.8.jar')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:26.0.2'
-    compile 'com.android.support:design:26.0.2'
-    compile 'com.android.support:cardview-v7:26.0.2'
+    implementation 'com.android.support:appcompat-v7:26.0.2'
+    implementation 'com.android.support:design:26.0.2'
+    implementation 'com.android.support:cardview-v7:26.0.2'
     annotationProcessor 'io.realm:realm-android:0.82.1'
-    compile 'io.realm:realm-android:0.82.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-//    compile 'com.android.volley:volley:1.0.0'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    testCompile 'junit:junit:4.12'
-    compile 'com.mixpanel.android:mixpanel-android:5.+'
-    compile 'com.google.android.gms:play-services-gcm:11.4.0'
-    compile 'com.google.firebase:firebase-crash:11.4.0'
+    implementation 'io.realm:realm-android:0.82.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+//    implementation 'com.android.volley:volley:1.0.0'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.mixpanel.android:mixpanel-android:5.+'
+    implementation 'com.google.android.gms:play-services-gcm:11.4.0'
+    implementation 'com.google.firebase:firebase-crash:11.4.0'
 
-    compile project(path: ':volley-master')
+    implementation project(path: ':volley-master')
 }
 apply plugin: 'com.google.gms.google-services'
